# RayEngine

./: CMakeLists.txt  main.c  map.txt  test.json
datastructures/: dynamicarry.c  dynamicarry.h  hashmap.c  hashmap.h  strtream.h
map/: map.c  map.h
player/: player.c  player.h
raycaster/: raycaster.c  raycaster.h
utils/: utils.c  utils.h
